--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="imagens/letra2.png" type="image/x-icon">
-    <title>Cartão de Visita</title>
+    <title>Curriculo Virtual</title>
 </head>
 <body  >
     <main >
